--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <br>
-        <div class="card card-primary">
-          <div class="card-header">
-            <h4 class="card-title">Demographic Info</h4>
+        <div class="card border-success mb-3 card text-left" style="max-width: 20rem;">
+          <div class="card-header  text-black" style="background-color: #87a88a">
+            <h4 class="card-title" >Demographic Info</h4>
           </div>
-          <div id="sample-metadata" class="card-body"></div>
+          <div id="sample-metadata" class="card-body" class="card mb-3" style="width: 18rem;">
+          </div>
         </div>
       </div>
       <div class="col-md-9">
@@ -43,7 +44,6 @@
       </div>
     </div>
   </div>
-
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
@@ -51,3 +51,6 @@
 </body>
 
 </html>
+
+
+
